--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1715702048
+dateModified: 1715708624
 email:
   fromEmail: 12102082@student.pxl.be
   fromName: Timecraft
@@ -24,7 +24,7 @@ meta:
     5a6f16c2-c4a6-4928-843b-39f6f133bdcc: welcomeHome # welcomeHome
     5f781169-c967-447b-b61f-93bbc1d5ace7: productTitle # productTitle
     6fa87c78-1100-4f04-8cb2-f41fa486e80c: Timecraft # Timecraft
-    17a564f6-c9a6-4ef6-8013-dbe306818bd9: Products # Products
+    17a564f6-c9a6-4ef6-8013-dbe306818bd9: Product # Product
     363b05aa-e8b4-47cd-86fb-d0220a4f46da: bannerImage # bannerImage
     8593d7a4-b06a-4f70-b8ec-472eaa70fa6a: bannerImageSet # bannerImageSet
     41790cbe-d7bb-4e1d-916a-c0caf50704a1: productImage # productImage
