--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1715795100
+dateModified: 1715976370
 email:
   fromEmail: 12102082@student.pxl.be
   fromName: Timecraft
@@ -20,8 +20,10 @@ fs:
     url: '@baseUrl/files'
 meta:
   __names__:
-    1e578cda-fb71-4c64-bcc9-533ab720270c: homeBanner # homeBanner
+    1dcd3c75-977e-4304-801a-ba1d8a3ebab9: productprice # productprice
+    1e578cda-fb71-4c64-bcc9-533ab720270c: Homepage # Homepage
     5a6f16c2-c4a6-4928-843b-39f6f133bdcc: welcomeHome # welcomeHome
+    5f3d144b-dbd8-4f86-88fa-08a430235c88: whatshottitle # whatshottitle
     5f781169-c967-447b-b61f-93bbc1d5ace7: productTitle # productTitle
     6fa87c78-1100-4f04-8cb2-f41fa486e80c: Timecraft # Timecraft
     17a564f6-c9a6-4ef6-8013-dbe306818bd9: Product # Product
@@ -29,6 +31,8 @@ meta:
     8593d7a4-b06a-4f70-b8ec-472eaa70fa6a: bannerImageSet # bannerImageSet
     41790cbe-d7bb-4e1d-916a-c0caf50704a1: productImage # productImage
     bb6d1994-9dd3-4b5c-b8cb-f3989d18b7b9: Product # Product
+    c49028ea-4679-4bf1-a89f-761652c237ba: productcardsthree # productcardsthree
+    ca1e00e3-7c4d-4385-8038-1b7cc8aa7a39: productdescription # productdescription
     d5ffdd0e-008d-450c-9cd2-3dff37e2134a: Timecraft # Timecraft
     ddc804c8-bffd-4a07-91f7-74952c334afb: productWatches # productWatches
     e91ba71a-c282-4bb7-83df-0ae627b2fca0: productPrice # productPrice
