--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1716062688
+dateModified: 1716208473
 email:
   fromEmail: 12102082@student.pxl.be
   fromName: Timecraft
@@ -20,6 +20,7 @@ fs:
     url: '@baseUrl/files'
 meta:
   __names__:
+    1bbc2744-dc6c-4446-851d-9125ea999d51: websitemail # websitemail
     1dcd3c75-977e-4304-801a-ba1d8a3ebab9: productprice # productprice
     1e578cda-fb71-4c64-bcc9-533ab720270c: homepage # homepage
     5a6f16c2-c4a6-4928-843b-39f6f133bdcc: welcomeHome # welcomeHome
@@ -28,14 +29,18 @@ meta:
     6fa87c78-1100-4f04-8cb2-f41fa486e80c: Timecraft # Timecraft
     7fe907d0-378a-418e-bf9c-ca489139fc6a: test # test
     17a564f6-c9a6-4ef6-8013-dbe306818bd9: Product # Product
+    33d77994-96c2-4629-b80d-1c398231f579: websitephone # websitephone
     363b05aa-e8b4-47cd-86fb-d0220a4f46da: bannerImage # bannerImage
+    779c6a13-befe-47c5-9729-bea14ce40020: websitetitle # websitetitle
     8593d7a4-b06a-4f70-b8ec-472eaa70fa6a: bannerImageSet # bannerImageSet
     41790cbe-d7bb-4e1d-916a-c0caf50704a1: productImage # productImage
     85751bc1-0bed-49a2-8899-09d9703e42f1: bannertext # bannertext
+    872518e7-11d4-407b-a0cc-8defee2343c7: footer # footer
     bb6d1994-9dd3-4b5c-b8cb-f3989d18b7b9: Product # Product
     c49028ea-4679-4bf1-a89f-761652c237ba: productcardsthree # productcardsthree
     ca1e00e3-7c4d-4385-8038-1b7cc8aa7a39: productdescription # productdescription
     d5ffdd0e-008d-450c-9cd2-3dff37e2134a: Timecraft # Timecraft
+    d80a575d-21d6-4959-b9b5-3153bbc94a68: websitelocation # websitelocation
     ddc804c8-bffd-4a07-91f7-74952c334afb: productWatches # productWatches
     e91ba71a-c282-4bb7-83df-0ae627b2fca0: productPrice # productPrice
 plugins:
