--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1716208473
+dateModified: 1716231526
 email:
   fromEmail: 12102082@student.pxl.be
   fromName: Timecraft
@@ -32,16 +32,20 @@ meta:
     33d77994-96c2-4629-b80d-1c398231f579: websitephone # websitephone
     363b05aa-e8b4-47cd-86fb-d0220a4f46da: bannerImage # bannerImage
     779c6a13-befe-47c5-9729-bea14ce40020: websitetitle # websitetitle
+    1774cf91-67ba-4ca3-8e05-0b08d289b4fb: navbar # navbar
     8593d7a4-b06a-4f70-b8ec-472eaa70fa6a: bannerImageSet # bannerImageSet
     41790cbe-d7bb-4e1d-916a-c0caf50704a1: productImage # productImage
     85751bc1-0bed-49a2-8899-09d9703e42f1: bannertext # bannertext
     872518e7-11d4-407b-a0cc-8defee2343c7: footer # footer
+    a338db41-cec4-4293-bb9e-6ea46c1dd4d1: websiteallproducts # websiteallproducts
     bb6d1994-9dd3-4b5c-b8cb-f3989d18b7b9: Product # Product
     c49028ea-4679-4bf1-a89f-761652c237ba: productcardsthree # productcardsthree
     ca1e00e3-7c4d-4385-8038-1b7cc8aa7a39: productdescription # productdescription
+    d0c3f850-629b-41a3-81d7-2cb860e9462b: websitecontact # websitecontact
     d5ffdd0e-008d-450c-9cd2-3dff37e2134a: Timecraft # Timecraft
     d80a575d-21d6-4959-b9b5-3153bbc94a68: websitelocation # websitelocation
     ddc804c8-bffd-4a07-91f7-74952c334afb: productWatches # productWatches
+    e9f5ef54-fd07-4a91-b53e-543fd17c40af: websitename # websitename
     e91ba71a-c282-4bb7-83df-0ae627b2fca0: productPrice # productPrice
 plugins:
   navigate:
