--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1716314110
+dateModified: 1716316733
 email:
   fromEmail: 12102082@student.pxl.be
   fromName: Timecraft
@@ -38,10 +38,13 @@ meta:
     85751bc1-0bed-49a2-8899-09d9703e42f1: bannertext # bannertext
     872518e7-11d4-407b-a0cc-8defee2343c7: footer # footer
     a338db41-cec4-4293-bb9e-6ea46c1dd4d1: websiteallproducts # websiteallproducts
+    b2f9b151-1a8d-4d13-a302-4200b13f4fc9: 'All products' # All products
     bb6d1994-9dd3-4b5c-b8cb-f3989d18b7b9: Product # Product
+    bee130bb-e764-442c-bcfe-29d7ff9e7161: contact # contact
     c49028ea-4679-4bf1-a89f-761652c237ba: productcardsthree # productcardsthree
     ca1e00e3-7c4d-4385-8038-1b7cc8aa7a39: productdescription # productdescription
     d0c3f850-629b-41a3-81d7-2cb860e9462b: websitecontact # websitecontact
+    d00bbfa5-8726-4d61-9d20-96f3de011140: Contact # Contact
     d5ffdd0e-008d-450c-9cd2-3dff37e2134a: Timecraft # Timecraft
     d80a575d-21d6-4959-b9b5-3153bbc94a68: websitelocation # websitelocation
     ddc804c8-bffd-4a07-91f7-74952c334afb: productWatches # productWatches
