--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,10 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "craftcms/cms": "5.1.4",
-    "solspace/craft-freeform": "^5.2.0",
+    "craftcms/cms": "5.1.5",
+    "solspace/craft-freeform": "5.2.2",
     "studioespresso/craft-navigate": "5.1.2",
+    "verbb/formie": "3.0.0-beta.11",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
