--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1716316733
+dateModified: 1716549597
 email:
   fromEmail: 12102082@student.pxl.be
   fromName: Timecraft
@@ -22,22 +22,24 @@ meta:
   __names__:
     1bbc2744-dc6c-4446-851d-9125ea999d51: websitemail # websitemail
     1dcd3c75-977e-4304-801a-ba1d8a3ebab9: productprice # productprice
-    1e578cda-fb71-4c64-bcc9-533ab720270c: homepage # homepage
+    1e578cda-fb71-4c64-bcc9-533ab720270c: Timecraft # Timecraft
     5a6f16c2-c4a6-4928-843b-39f6f133bdcc: welcomeHome # welcomeHome
     5f3d144b-dbd8-4f86-88fa-08a430235c88: whatshottitle # whatshottitle
     5f781169-c967-447b-b61f-93bbc1d5ace7: productTitle # productTitle
     6fa87c78-1100-4f04-8cb2-f41fa486e80c: Timecraft # Timecraft
-    7fe907d0-378a-418e-bf9c-ca489139fc6a: test # test
+    7fdb8cf2-e641-4762-94c7-0695720833bf: Filter # Filter
     17a564f6-c9a6-4ef6-8013-dbe306818bd9: Product # Product
     33d77994-96c2-4629-b80d-1c398231f579: websitephone # websitephone
     363b05aa-e8b4-47cd-86fb-d0220a4f46da: bannerImage # bannerImage
     779c6a13-befe-47c5-9729-bea14ce40020: websitetitle # websitetitle
     1774cf91-67ba-4ca3-8e05-0b08d289b4fb: navbar # navbar
+    03840bf7-a462-4ab4-8c39-a9eb7d66eb6c: 'Contact Form' # Contact Form
     8593d7a4-b06a-4f70-b8ec-472eaa70fa6a: bannerImageSet # bannerImageSet
     41790cbe-d7bb-4e1d-916a-c0caf50704a1: productImage # productImage
     85751bc1-0bed-49a2-8899-09d9703e42f1: bannertext # bannertext
     872518e7-11d4-407b-a0cc-8defee2343c7: footer # footer
     a338db41-cec4-4293-bb9e-6ea46c1dd4d1: websiteallproducts # websiteallproducts
+    aaa5f5bc-a8f5-49e4-b7d2-c1a90a253f30: New # New
     b2f9b151-1a8d-4d13-a302-4200b13f4fc9: 'All products' # All products
     bb6d1994-9dd3-4b5c-b8cb-f3989d18b7b9: Product # Product
     bee130bb-e764-442c-bcfe-29d7ff9e7161: contact # contact
@@ -49,8 +51,15 @@ meta:
     d80a575d-21d6-4959-b9b5-3153bbc94a68: websitelocation # websitelocation
     ddc804c8-bffd-4a07-91f7-74952c334afb: productWatches # productWatches
     e9f5ef54-fd07-4a91-b53e-543fd17c40af: websitename # websitename
+    e34cb142-6c6b-40aa-9eb6-a21c5499d912: FilterProducts # FilterProducts
     e91ba71a-c282-4bb7-83df-0ae627b2fca0: productPrice # productPrice
+    ed6e297a-36d4-4752-b580-4724f4f062ba: Filter # Filter
 plugins:
+  formie:
+    edition: standard
+    enabled: true
+    licenseKey: 1O63YOXZR5OHH19GC31WRHPC
+    schemaVersion: 3.4.4
   freeform:
     edition: express
     enabled: true
