cookie banner added maybe styling?

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "prefer-stable": true,
   "require": {
     "craftcms/cms": "5.1.6",
+    "elleracompany/craft-cookie-consent": "5.0.1",
     "solspace/craft-freeform": "5.3.0",
     "studioespresso/craft-navigate": "5.1.2",
     "verbb/formie": "3.0.0-beta.11",
