--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
+    "craftcms/ckeditor": "4.0.6",
     "craftcms/cms": "5.1.6",
     "elleracompany/craft-cookie-consent": "5.0.1",
     "solspace/craft-freeform": "5.3.0",
